--- a/VeloTours/Web.config
+++ b/VeloTours/Web.config
@@ -9,9 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-VeloTours-20120913201801;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-VeloTours-20120913201801.mdf" providerName="System.Data.SqlClient" />-->
-    <!--<add name="SegmentsContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Segments.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>-->
-    <add name="SegmentsContext" connectionString="Data Source=|DataDirectory|VeloTours.sdf" providerName="System.Data.SqlServerCe.4.0"/>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-VeloTours-20120913201801;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-VeloTours-20120913201801.mdf" providerName="System.Data.SqlClient" />
+    <add name="TourContext"
+      connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\VeloTours.mdf;Integrated Security=True"
+      providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
