--- a/VeloTours/Web.config
+++ b/VeloTours/Web.config
@@ -11,7 +11,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-VeloTours-20120913201801;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-VeloTours-20120913201801.mdf" providerName="System.Data.SqlClient" />
     <add name="TourContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\VeloTours.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
-  <add name="TourModelContainer" connectionString="metadata=res://*/Models.TourModel.csdl|res://*/Models.TourModel.ssdl|res://*/Models.TourModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\VeloTours.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="TourModelContainer" connectionString="metadata=res://*/Models.TourModel.csdl|res://*/Models.TourModel.ssdl|res://*/Models.TourModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\VeloTours.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -20,7 +21,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5"><assemblies><add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" /></assemblies></compilation>
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>
+        <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.5" />
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
