--- a/VeloTours/packages.config
+++ b/VeloTours/packages.config
@@ -29,5 +29,6 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.9" targetFramework="net45" />
   <package id="PagedList" version="1.15.0.0" targetFramework="net45" />
+  <package id="RestSharp" version="104.1" targetFramework="net45" />
   <package id="WebGrease" version="1.1.0" targetFramework="net45" />
 </packages>
