--- a/VeloTours/VeloTours.csproj
+++ b/VeloTours/VeloTours.csproj
@@ -47,6 +47,9 @@
     <Reference Include="PagedList">
       <HintPath>..\packages\PagedList.1.15.0.0\lib\net40\PagedList.dll</HintPath>
     </Reference>
+    <Reference Include="RestSharp">
+      <HintPath>..\packages\RestSharp.104.1\lib\net4\RestSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
@@ -169,14 +172,16 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\Account\AccountController.cs" />
     <Compile Include="Controllers\Pages\AdminController.cs" />
-    <Compile Include="Controllers\Pages\ProfileController.cs" />
     <Compile Include="Controllers\Pages\HomeController.cs" />
+    <Compile Include="Controllers\Pages\ProfileController.cs" />
+    <Compile Include="Controllers\Pages\SegmentController.cs" />
     <Compile Include="DAL\InitDB.cs" />
     <Compile Include="DAL\TourInitializer.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\HtmlHelpers.cs" />
     <Compile Include="Models\Account\AccountModels.cs" />
     <Compile Include="Models\Athlete.cs">
       <DependentUpon>TourModel.tt</DependentUpon>
@@ -309,6 +314,7 @@
     <Content Include="Scripts\knockout-2.1.0.debug.js" />
     <Content Include="Scripts\knockout-2.1.0.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Content\VeloTours.css" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -351,6 +357,8 @@
     <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\Admin\Init.cshtml" />
     <Content Include="Views\Profile\Index.cshtml" />
+    <Content Include="Views\Segment\Segment.cshtml" />
+    <Content Include="Views\Segment\Area.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
