--- a/VeloTours/Web.config
+++ b/VeloTours/Web.config
@@ -39,6 +39,7 @@
         <add namespace="System.Web.Optimization" />
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.WebPages" />
+        <add namespace="VeloTours.Helpers" />
       </namespaces>
     </pages>
   </system.web>
