--- a/VeloTours/Web.config
+++ b/VeloTours/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-VeloTours-20120913201801;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-VeloTours-20120913201801.mdf" providerName="System.Data.SqlClient" />
-    <add name="TourContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\VeloTours.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="TourContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\VeloTours.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <add name="TourModelContainer" connectionString="metadata=res://*/Models.TourModel.csdl|res://*/Models.TourModel.ssdl|res://*/Models.TourModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\VeloTours.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
@@ -58,7 +58,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
