--- a/VeloTours/VeloTours.csproj
+++ b/VeloTours/VeloTours.csproj
@@ -185,6 +185,7 @@
     <Compile Include="DAL\InitDB\Athlete.cs" />
     <Compile Include="DAL\InitDB\Norway\Norway.cs" />
     <Compile Include="DAL\TourInitializer.cs" />
+    <Compile Include="DAL\Update\Area.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
