--- a/VeloTours/Web.config
+++ b/VeloTours/Web.config
@@ -13,6 +13,7 @@
       <section name="openid" type="DotNetOpenAuth.Configuration.OpenIdElement, DotNetOpenAuth.OpenId" requirePermission="false" allowLocation="true" />
       <section name="oauth" type="DotNetOpenAuth.Configuration.OAuthElement, DotNetOpenAuth.OAuth" requirePermission="false" allowLocation="true" />
     </sectionGroup>
+    <section name="stravan" type="Stravan.Configuration.StravanConfigurationSection, Stravan" />
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-VeloTours-20120913201801;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-VeloTours-20120913201801.mdf" providerName="System.Data.SqlClient" />
@@ -128,6 +129,15 @@
       </relyingParty>
     </openid>
   </dotNetOpenAuth>
+  <stravan>
+    <client poolSize="10" />
+    <api>
+      <versions>
+        <version name="1" version="1" baseUrl="http://www.strava.com/api/v1/" secureBaseUrl="https://www.strava.com/api/v1/" />
+        <version name="2" version="2" baseUrl="http://www.strava.com/api/v2/" secureBaseUrl="https://www.strava.com/api/v2/" />
+      </versions>
+    </api>
+  </stravan>
   <uri>
     <!-- The uri section is necessary to turn on .NET 3.5 support for IDN (international domain names),
 		     which is necessary for OpenID urls with unicode characters in the domain/host name.
