Added Update from Strava

--- a/VeloTours/VeloTours.csproj
+++ b/VeloTours/VeloTours.csproj
@@ -184,13 +184,15 @@
     <Compile Include="Controllers\Pages\HomeController.cs" />
     <Compile Include="Controllers\Pages\ProfileController.cs" />
     <Compile Include="Controllers\Pages\SegmentController.cs" />
-    <Compile Include="DAL\InitDB\InitDB.cs" />
-    <Compile Include="DAL\InitDB\Athlete.cs" />
-    <Compile Include="DAL\InitDB\Norway\Norway.cs" />
-    <Compile Include="DAL\InitDB\TourInitializer.cs" />
-    <Compile Include="DAL\Update\Area.cs" />
-    <Compile Include="DAL\Update\Segment.cs" />
-    <Compile Include="DAL\Update\SegmentEffort.cs" />
+    <Compile Include="DAL\All_InitDB\InitDB.cs" />
+    <Compile Include="DAL\All_InitDB\Athlete.cs" />
+    <Compile Include="DAL\All_InitDB\Norway\Norway.cs" />
+    <Compile Include="DAL\All_InitDB\TourInitializer.cs" />
+    <Compile Include="DAL\Area\Update.cs" />
+    <Compile Include="DAL\Country\Update.cs" />
+    <Compile Include="DAL\Region\Update.cs" />
+    <Compile Include="DAL\Segment\Update.cs" />
+    <Compile Include="DAL\Segment\SegmentEffort.cs" />
     <Compile Include="DAL\Utils.cs" />
     <Compile Include="Filters\InitializeSimpleMembershipAttribute.cs" />
     <Compile Include="Global.asax.cs">
