--- a/VeloTours/VeloTours.csproj
+++ b/VeloTours/VeloTours.csproj
@@ -200,6 +200,7 @@
     <Compile Include="DAL\Segment\LeaderboardCalc.cs" />
     <Compile Include="DAL\Segment\SegmentUpdate.cs" />
     <Compile Include="DAL\Segment\SegmentEffort.cs" />
+    <Compile Include="DAL\Segment\EffortUpdateStatus.cs" />
     <Compile Include="DAL\Utils.cs" />
     <Compile Include="Extensions\EnumerableStats\EnumerableStats.cs" />
     <Compile Include="Extensions\EnumerableStats\EnumerableStatsCovariance.cs" />
@@ -261,6 +262,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\AthleteInfoViewModel.cs" />
+    <Compile Include="ViewModel\Segment\AthleteRideInfo.cs" />
     <Compile Include="ViewModel\Segment\SegmentAreaViewModel.cs" />
     <Compile Include="ViewModel\Segment\SegmentViewModel.cs" />
   </ItemGroup>
@@ -409,6 +411,8 @@
     <Content Include="Views\Area\Index.cshtml" />
     <Content Include="Views\Country\Index.cshtml" />
     <Content Include="Views\Segment\SegmentPart.cshtml" />
+    <Content Include="Views\Segment\YerseyPart.cshtml" />
+    <Content Include="Views\Segment\Leaderboard.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
