Added calcuations for SegmentAreas

--- a/VeloTours/VeloTours.csproj
+++ b/VeloTours/VeloTours.csproj
@@ -431,6 +431,7 @@
     <Content Include="Views\Segment\LeaderboardPart.cshtml" />
     <Content Include="Views\Area\YerseyPart.cshtml" />
     <Content Include="Views\Area\SegmentsPart.cshtml" />
+    <Content Include="Views\Area\AthleteInfoPart.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
